--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       db:
-        image: postgres:12.3-alpine
+        image: 17.2-alpine
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
